--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "react-virtualized": "^9.21.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -26,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-virtualized": "^9.18.12"
+  }
 }
